--- a/ConnectProject/ConnectProject.csproj
+++ b/ConnectProject/ConnectProject.csproj
@@ -69,6 +69,10 @@
 		<CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Chrome.Test|AnyCPU'">
+	  <PlatformTarget>AnyCPU</PlatformTarget>
+	</PropertyGroup>
+
 	<ItemGroup>
 	  <Compile Remove="TestResults\**" />
 	  <EmbeddedResource Remove="TestResults\**" />
@@ -77,12 +81,20 @@
 	  <SpecFlowObsoleteCodeBehindFiles Remove="TestResults\**" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <SpecFlowFeatureFiles Remove="Features\Login2.feature" />
+	</ItemGroup>
+
   <ItemGroup>
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\Login - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\Login.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\Registration - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\Registration-3 - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\Registration-4 - Copy.feature.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Features\Login2.feature" />
   </ItemGroup>
 
   <ItemGroup>
@@ -101,6 +113,7 @@
     <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="93.0.4577.6300" />
     <PackageReference Include="SpecFlow" Version="3.9.22" />
     <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
