--- a/ConnectProject/appsettings.Chrome.Preprod.json
+++ b/ConnectProject/appsettings.Chrome.Preprod.json
@@ -1,6 +1,6 @@
 ﻿{
   "Environment": "preprod",
   "browser": "chrome",
-  "URL": "https://conect-stg.acr.org"
+  "URL": "https://connect-stg.acr.org/"
 
 }
